# heliotrope

./: .travis.yml  Cargo.toml  LICENSE-APACHE  README.md  index.html  params.json  search-index.js
.cargo/: config
encoding/: index.html
encoding/all/: index.html  static.ASCII.html  static.BIG5_2003.html  static.ERROR.html  static.EUC_JP.html  static.GB18030.html  static.HZ.html  static.IBM866.html  static.KOI8_R.html  (+32 more)
examples/: hello.rs
heliotrope/: enum.SolrValue.html  enum.SortOrder.html  index.html  stability.html  stability.json  struct.Solr.html  struct.SolrDeleteRequest.html  struct.SolrDocument.html  struct.SolrError.html  struct.SolrField.html  struct.SolrQuery.html  struct.SolrQueryResponse.html  struct.SolrUpdateResponse.html  struct.SortClause.html  type.SolrQueryResult.html  type.SolrUpdateResult.html  type.SolrValue.html  type.SortOrder.html
http/: index.html  stability.html  stability.json
openssl/: index.html  stability.html  stability.json
src/: client.rs  document.rs  http_utils.rs  lib.rs  query.rs  request.rs  response.rs
tests/: http_utils_tests.rs  request_tests.rs  solr_client_tests.rs  solr_document_tests.rs  solr_query_integration_tests.rs  solr_query_tests.rs  solr_tests.rs
url/: fn.parse_path.html  fn.whatwg_scheme_type_mapper.html  index.html  stability.json  struct.Ipv6Address.html  struct.RelativeSchemeData.html  struct.Url.html  struct.UrlParser.html  trait.FromUrlPath.html  trait.ToUrlPath.html  type.ErrorHandler.html  type.Host.html  type.ParseError.html  type.ParseResult.html  type.SchemeData.html  type.SchemeType.html
(+468 files in other folders)
