[package]
name = "heliotrope"
description = "SOLR client for Rust programming language"
documentation = "http://valve.github.io/heliotrope/heliotrope/index.html"
repository = "https://github.com/valve/heliotrope"
keywords = ["solr", "full-text", "search"]
license = "MIT/Apache"
version = "0.0.2"
authors = ["Valentin Vasilyev <valentin.vasilyev@outlook.com>"]


[dependencies]
url = "*"
hyper = "*"

